--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   </properties>
 
   <dependencies>
-
+  
     <dependency>
       <groupId>io.github.cdimascio</groupId>
       <artifactId>dotenv-java</artifactId>
@@ -36,6 +36,11 @@
         <groupId>org.glassfish.jersey.media</groupId>
         <artifactId>jersey-media-json-jackson</artifactId>
         <version>2.35</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.inject</groupId>
+      <artifactId>jersey-hk2</artifactId>
+      <version>2.35</version>
     </dependency>
     <dependency>
         <groupId>log4j</groupId>
